--- a/airport-ui/src/components/AirportApp/Content/AdminPanelContent/AdminPanelContent.scss
+++ b/airport-ui/src/components/AirportApp/Content/AdminPanelContent/AdminPanelContent.scss
@@ -1,7 +1,13 @@
-.admin-panel {
+.admin-panel-content {
+    padding: 14px 16px;
+    border: 1px solid lightgrey;
+    margin: 10px;
+    border-radius: 7px;
+
     &--row {
         margin-bottom: 15px;
     }
+
     &--import-data {
         &__success {
             font-weight: bold;
